--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,22 +12,5 @@
     android:showDividers="middle"
     tools:context="it.ennova.phonefield.MainActivity">
 
-    <it.ennova.phonefield.view.CountryView
-        android:id="@+id/countryView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/cv_phone_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/cv_phone_number_hint"
-            android:inputType="phone"
-            android:lines="1" />
-
-    </android.support.design.widget.TextInputLayout>
+    <include layout="@layout/layout_number_view" />
 </LinearLayout>
