Fixes the tested view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,8 @@
     android:showDividers="middle"
     tools:context="it.ennova.phonefield.MainActivity">
 
-    <include layout="@layout/layout_number_view" />
+    <it.ennova.phonefield.view.CountryNumberView
+        android:id="@+id/countryNumberView"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent" />
 </LinearLayout>
