--- a/app/src/main/res/layout/layout_number_view.xml
+++ b/app/src/main/res/layout/layout_number_view.xml
@@ -5,10 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:divider="@drawable/country_item_divider"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:showDividers="middle"
     android:gravity="center"
     tools:context="it.ennova.phonefield.MainActivity">
@@ -18,17 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <android.support.design.widget.TextInputLayout
+    <it.ennova.phonefield.view.CountryPhoneView
+        android:id="@+id/phoneView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/cv_phone_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/cv_phone_number_hint"
-            android:inputType="phone"
-            android:lines="1" />
-
-    </android.support.design.widget.TextInputLayout>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
