Adds new filtering functionalities for the Country

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
     android:showDividers="middle"
     tools:context="it.ennova.phonefield.MainActivity">
 
-    <it.ennova.phonefield.view.CountryNumberView
-        android:id="@+id/countryNumberView"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/countryList"
+        android:layout_width="match_parent"
+        android:layout_height="320dp"/>
 </android.support.design.widget.CoordinatorLayout>
