--- a/testapp/src/main/res/layout/activity_main.xml
+++ b/testapp/src/main/res/layout/activity_main.xml
@@ -4,13 +4,12 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:divider="@drawable/country_item_divider"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:showDividers="middle"
-    tools:context="it.ennova.phonefield.MainActivity">
+    tools:context="it.ennova.testapp.MainActivity">
 
     <it.ennova.phonefield.view.CountryNumberView
         android:id="@+id/countryNumberView"
